// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Link Link play-test 1`] = `
<kd-link id="test"
         href
         target="_self"
         kind="primary"
>
  Link Text
</kd-link>
<a role="link"
   class="kd-link-text  kd-link-text-primary kd-link-text-inline "
   target="_self"
   rel
   href="javascript:void(0)"
>
  <span class="kd-link-text-span-flex">
    <slot>
    </slot>
    <slot name="icon">
    </slot>
  </span>
</a>
`;

exports[`Components/Link LinkWithIcon smoke-test 1`] = `
<kd-link id="test"
         standalone
         href
         target="_self"
         kind="primary"
>
  Link Text
  <kd-icon slot="icon"
           sizeoverride="16"
  >
  </kd-icon>
</kd-link>
<a role="link"
   class="kd-link-text  kd-link-text-primary kd-link-text-standalone "
   target="_self"
   rel
   href="javascript:void(0)"
>
  <span class="kd-link-text-span-flex">
    <slot>
    </slot>
    <slot name="icon">
    </slot>
  </span>
</a>
<svg focusable="false"
     preserveaspectratio="xMidYMid meet"
     xmlns="http://www.w3.org/2000/svg"
     fill="currentColor"
     aria-hidden="true"
     width="16"
     height="16"
     viewbox="0 0 16 16"
>
  <path d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z">
  </path>
</svg>
`;
